Finalized typo-correction